--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,17 +1,3 @@
-spring.profiles.active=local
-
-logging.config=classpath:logback.xml
-#logging.file=logs/springboot.log
-
-#spring.mail.host=smtp.sina.com.cn
-#spring.mail.username=hb_java
-#spring.mail.password=
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.starttls.required=true
-
-mybatis.config-location=classpath:mybatis.xml
-
 #server.address=0.0.0.0
 #logging.level.root=debug
 #logging.level.org.springframework=debug
@@ -29,9 +15,9 @@ mybatis.config-location=classpath:mybatis.xml
 #spring.redis.pool.max-wait=-1
 
 # Datasource
-spring.datasource.url=jdbc:postgresql://192.168.120.128:5432/la
+spring.datasource.url=jdbc:postgresql://google/postgres?useSSL=false&amp;socketFactoryArg=newagent-25039:asia-northeast1:la&amp;socketFactory=com.google.cloud.sql.postgres.SocketFactory&amp;user=postgres&amp;password=la123456
 spring.datasource.username=postgres
-spring.datasource.password=19786028
+spring.datasource.password=la123456
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #uaa.url=c48fce69-74a5-45e5-a02d-9c08258abce1.predix-uaa.run.aws-usw02-pr.ice.predix.io
