--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,7 +15,7 @@
 #spring.redis.pool.max-wait=-1
 
 # Datasource
-spring.datasource.url=jdbc:postgresql://google/postgres?useSSL=false&amp;socketFactoryArg=newagent-25039:asia-northeast1:la&amp;socketFactory=com.google.cloud.sql.postgres.SocketFactory&amp;user=postgres&amp;password=la123456
+spring.datasource.url=jdbc:postgresql://google/postgres?useSSL=false&socketFactoryArg=newagent-25039:asia-northeast1:la&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=la123456
 spring.datasource.username=postgres
 spring.datasource.password=la123456
 spring.datasource.driverClassName=org.postgresql.Driver
