--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,10 +15,10 @@
 #spring.redis.pool.max-wait=-1
 
 # Datasource
-spring.datasource.url=jdbc:postgresql://google/postgres?useSSL=false&socketFactoryArg=newagent-25039:asia-northeast1:la&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=la123456
-spring.datasource.username=postgres
-spring.datasource.password=la123456
-spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://google/postgres?useSSL=false&socketFactoryArg=newagent-25039:asia-northeast1:la&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=la123456
+#spring.datasource.username=postgres
+#spring.datasource.password=la123456
+#spring.datasource.driverClassName=org.postgresql.Driver
 
 #uaa.url=c48fce69-74a5-45e5-a02d-9c08258abce1.predix-uaa.run.aws-usw02-pr.ice.predix.io
 #uaa.authorization=Basic dGVzdDp0ZXN0
