--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=dev
 
-logging.config=classpath:logback.xml
+#logging.config=classpath:logback.xml
 #logging.file=logs/springboot.log
 
 #spring.mail.host=smtp.sina.com.cn
