add gcp dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=local
+spring.profiles.active=dev
 
 #logging.config=classpath:logback.xml
 #logging.file=logs/springboot.log
