--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:postgresql://google/postgres?useSSL=false&socketFactoryArg=newagent-25039:asia-northeast1:la&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=la123456
 #spring.datasource.username=postgres
 #spring.datasource.password=la123456
-#spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 
 #spring.cloud.gcp.sql.database-name=la
 #spring.cloud.gcp.sql.instance-connection-name=newagent-25039:asia-northeast1:la
