--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,12 +4,12 @@ spring.datasource.url=jdbc:postgresql://google/postgres?useSSL=false&socketFacto
 #spring.datasource.password=la123456
 spring.datasource.driverClassName=org.postgresql.Driver
 
-#spring.cloud.gcp.sql.database-name=la
-#spring.cloud.gcp.sql.instance-connection-name=newagent-25039:asia-northeast1:la
-#spring.datasource.username=postgres
-#spring.datasource.password=la123456
+spring.cloud.gcp.sql.database-name=la
+spring.cloud.gcp.sql.instance-connection-name=newagent-25039:asia-northeast1:la
+spring.datasource.username=postgres
+spring.datasource.password=la123456
 # So app starts despite "table already exists" errors.
-#spring.datasource.continue-on-error=true
+spring.datasource.continue-on-error=true
 
 #spring.cloud.gcp.project-id=
 #spring.cloud.gcp.credentials.location=file:/path/to/service-account.json
