--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,24 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<resources>  
+            <resource>  
+                <directory>src/main/java</directory>  
+                <includes>  
+                    <include>**/*.properties</include>  
+                    <include>**/*.xml</include>  
+                </includes>  
+                <!-- 是否替换资源中的属性-->  
+                <filtering>false</filtering>  
+            </resource>  
+            <resource>  
+                <directory>src/main/resources</directory>  
+                <!--  
+                    <includes> <include>**/*.properties</include>  
+                    <include>**/*.xml</include> </includes> <filtering>true</filtering>  
+                -->  
+            </resource>  
+		</resources> 
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
